changes with template logo
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7534 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/GenProperties.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/GenProperties.mxml
@@ -51,13 +51,13 @@
 			{
 				ContextManager.instance.saveToServer = chkServer.selected;
 				ContextManager.instance.saveToFile = chkFile.selected;
-				ContextManager.instance.file.url = FileUtils.pathToUrl( fileBrowse.text );
+				ContextManager.instance.file.url = FileUtils.pathToUrl( fileBrowse.path );
 			}
 		}
 
 		private function onShow() : void
 		{
-			fileBrowse.text = ContextManager.instance.file.nativePath;
+			fileBrowse.path = ContextManager.instance.file.nativePath;
 			chkServer.setFocus();
 		}
 		]]>
