--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTable.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTable.mxml
@@ -21,6 +21,7 @@
 			import net.vdombox.ide.modules.dataBase.events.EditorEvent;
 			
 			[Bindable]
+			// FIXME: not Object mas by IVDOMObjectVO.
 			private var _objectVO : Object;
 			
 			public function get editorID() : String
