--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableEditor.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableEditor.mxml
@@ -253,6 +253,7 @@
 
 			}
 			
+			// FIXME: Большая запутанная функция.
 			private function buildPagesTickets() : void 
 			{
 				/* (Re)Build pages tickets */
