set current conatiner in tree
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7537 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/LibrariesPanel.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/LibrariesPanel.mxml
@@ -129,7 +129,8 @@
 			dataProvider="{ _libraries }" height="100%" labelField="name" width="100%"
 			itemRenderer="net.vdombox.ide.modules.scripts.view.components.ListItemRenderer"
 			contentBackgroundAlpha="0" borderVisible="false"
-			creationComplete="librariesList_creationCompleteHandler(event)"/>
+			creationComplete="librariesList_creationCompleteHandler(event)"
+			doubleClickEnabled="true"/>
 
 	<s:controlBarContent>
 
