--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/Body.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/Body.mxml
@@ -3,7 +3,7 @@
 		  xmlns:fx="http://ns.adobe.com/mxml/2009"
 		  xmlns:mx="library://ns.adobe.com/flex/halo"
 		  xmlns:s="library://ns.adobe.com/flex/spark"
-		  height="100%" width="100%" xmlns:mx1="library://ns.adobe.com/flex/mx">
+		  height="100%" width="100%" xmlns:mx1="library://ns.adobe.com/flex/mx" gap="0">
 	<fx:Script>
 		<![CDATA[
 			import net.vdombox.ide.modules.scripts.view.skins.PanelSkin;
