--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ContainersPanel.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ContainersPanel.mxml
@@ -144,6 +144,8 @@
 				{
 					_needUpdateProperties 		= false;
 					
+					_needValideteDisplayList 	= true;
+					
 					openTree( elementForSelection );
 					
 					containersTree.selectedItem = elementForSelection;
@@ -162,6 +164,27 @@
 					openTree( parentItem );
 					containersTree.expandItem( parentItem, true, false );
 				}
+			}
+			
+			private var _needValideteDisplayList : Boolean = false;
+			override public function  validateDisplayList():void
+			{
+				// scrolling to necessary position
+				super.validateDisplayList();
+				
+				if ( !_needValideteDisplayList )
+					return
+					
+					_needValideteDisplayList = false;
+				
+				if (containersTree.selectedIndex == -1 )
+					return;
+				
+				var index : int =  containersTree.selectedIndex;
+				var newVPos:int;
+				
+				containersTree.scrollToIndex(index);
+				
 			}
 
 			public function get selectedItem() : XML
