--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ObjectsTreePanel.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ObjectsTreePanel.mxml
@@ -13,17 +13,150 @@
 			import mx.controls.treeClasses.TreeItemRenderer;
 			import mx.events.FlexEvent;
 			
+			[Bindable]
+			private var _structure : XMLList;
+			
 			[Embed(source="assets/disclosureClosedIcon.png")]
 			public var plus:Class;
 			
 			[Embed(source="assets/disclosureOpenIcon.png")]
 			public var minus:Class;
 			
+			public function set structure( value : XMLList ) : void
+			{
+				_structure = value;
+			}
+			
+			public function get structure() : XMLList
+			{
+				return _structure;
+			}
+			
 			protected function objectsTree_creationCompleteHandler(event:FlexEvent):void
 			{
 				// TODO Auto-generated method stub
 				objectsTree.setStyle("disclosureOpenIcon", minus);
 				objectsTree.setStyle("disclosureClosedIcon", plus);
+			}
+			
+			public function set selectedObjectID( value : String ) : void
+			{
+				var currentID : String;
+				
+				if ( !_structure )
+					return;
+				
+				try
+				{
+					currentID = objectsTree.selectedItem.@id;
+				}
+				catch ( error : Error )
+				{
+				}
+				
+				if ( !value )
+					objectsTree.selectedIndex = -1;
+				else if ( value != currentID )
+					setSelectionByID( value );
+			}
+			
+			public function set selectedPageID( value : String ) : void
+			{
+				var currentID : String;
+				
+				if ( !_structure )
+					return;
+				
+				try
+				{
+					currentID = objectsTree.selectedItem.@id;
+				}
+				catch ( error : Error )
+				{
+				}
+				
+				
+				if ( !value )
+					objectsTree.selectedIndex = -1;
+				else 
+					//					if ( value != currentID )
+					setSelectionByID( value );
+			}
+			
+			private var elementForSelection : XML;
+			private var _needUpdateProperties : Boolean = false;
+			
+			private function setSelectionByID( id : String ) : void
+			{
+				try
+				{
+					elementForSelection = _structure.( @id == id )[ 0 ];
+					
+					if ( !elementForSelection )
+						elementForSelection = _structure..object.( @id == id )[ 0 ];
+				}
+				catch ( error : Error )
+				{
+					
+				}
+				
+				if ( elementForSelection )
+				{
+					_needUpdateProperties = true;
+					
+					invalidateProperties();
+				}
+			}
+			
+			override public function  validateProperties():void
+			{
+				super.validateProperties();
+				
+				if ( _needUpdateProperties )
+				{
+					_needUpdateProperties 		= false;
+					
+					_needValideteDisplayList 	= true;
+					
+					openTree( elementForSelection );
+					
+					objectsTree.selectedItem = elementForSelection;
+					
+					invalidateDisplayList();
+				}
+				
+			}
+			
+			private function openTree( item : Object ) : void
+			{
+				var parentItem : Object = XML( item ).parent();
+				
+				if ( parentItem )
+				{
+					openTree( parentItem );
+					objectsTree.expandItem( parentItem, true, false );
+				}
+			}
+			
+			private var _needValideteDisplayList : Boolean = false;
+			override public function  validateDisplayList():void
+			{
+				// scrolling to necessary position
+				super.validateDisplayList();
+				
+				if ( !_needValideteDisplayList )
+					return
+					
+					_needValideteDisplayList = false;
+				
+				if (objectsTree.selectedIndex == -1 )
+					return;
+				
+				var index : int =  objectsTree.selectedIndex;
+				var newVPos:int;
+				
+				objectsTree.scrollToIndex(index);
+				
 			}
 			
 		]]>
@@ -37,7 +170,7 @@
 	</s:Rect>
 
 	<mx:Tree id="objectsTree" maxHorizontalScrollPosition="140" horizontalScrollPolicy="auto"
-			 itemRenderer="net.vdombox.components.ObjectsTreePanelItemRenderer"
+			 dataProvider="{ _structure }" itemRenderer="net.vdombox.components.ObjectsTreePanelItemRenderer"
 			 height="100%"
 			 width="100%" contentBackgroundAlpha="0"
 			 creationComplete="objectsTree_creationCompleteHandler(event)"/>
