set current object in workArea
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7539 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ObjectsTreePanel.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ObjectsTreePanel.mxml
@@ -39,6 +39,21 @@
 				objectsTree.setStyle("disclosureClosedIcon", plus);
 			}
 			
+			public function get selectedObject() : XML
+			{
+				var selectedItem : XML = objectsTree.selectedItem as XML;
+				
+				if ( !selectedItem && elementForSelection )
+					selectedItem = elementForSelection;
+				var item : XML;
+				
+				if ( selectedItem && selectedItem.name() == "object" )
+					item = selectedItem;
+				
+				return item;
+				
+			}
+			
 			public function set selectedObjectID( value : String ) : void
 			{
 				var currentID : String;
