--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTable.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTable.mxml
@@ -15,10 +15,10 @@
 		<![CDATA[
 			import mx.events.FlexEvent;
 			
+			import net.vdombox.ide.common.events.EditorEvent;
 			import net.vdombox.ide.common.vo.ObjectVO;
 			import net.vdombox.ide.common.vo.PageVO;
 			import net.vdombox.ide.modules.dataBase.events.DataTablesEvents;
-			import net.vdombox.ide.modules.dataBase.events.EditorEvent;
 			
 			[Bindable]
 			// FIXME: not Object mas by IVDOMObjectVO.
