--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/EditableParameterRenderer.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/EditableParameterRenderer.mxml
@@ -12,6 +12,8 @@
 			import net.vdombox.ide.common.events.StringAttributeEditWindowEvent;
 			import net.vdombox.ide.common.vo.ActionParameterVO;
 			import net.vdombox.utils.WindowManager;
+			
+			import spark.events.TextOperationEvent;
 
 			[Bindable]
 			private var _data : ActionParameterVO;
@@ -74,7 +76,7 @@
 		<s:Label text="{ _data.name }"/>
 		<mx:Spacer width="4"/>
 		<s:TextInput id="actionText" minWidth="0" text="@{ _data.value }" width="100%"
-					 focusAlpha="0" doubleClick="textinput1_doubleClickHandler(event)"/>
+					 focusAlpha="0" doubleClick="textinput1_doubleClickHandler(event)" />
 	</s:HGroup>
 
 	<s:Line xFrom="24" xTo="24" yFrom="0" yTo="20">
