--- a/IDE/v.02/common/src/net/vdombox/components/ObjectsTreePanelItemRenderer.mxml
+++ b/IDE/v.02/common/src/net/vdombox/components/ObjectsTreePanelItemRenderer.mxml
@@ -2,10 +2,13 @@
 <s:MXTreeItemRenderer xmlns:fx="http://ns.adobe.com/mxml/2009" 
 					  xmlns:s="library://ns.adobe.com/flex/spark" 
 					  xmlns:mx="library://ns.adobe.com/flex/mx"
-					  width="100%" minWidth="225" xmlns:view="net.vdombox.view.*">
+					  width="100%" minWidth="225" xmlns:view="net.vdombox.view.*"
+					  doubleClickEnabled="true" doubleClick="mxtreeitemrenderer1_doubleClickHandler(event)">
 	<fx:Script>
 		<![CDATA[
 			import mx.events.FlexEvent;
+			
+			import net.vdombox.ide.common.events.ObjectsTreePanelEvent;
 			
 			//private var dataChanged : Boolean = false;
 			
@@ -37,6 +40,12 @@
 				if ( !_data )
 					return;
 			}*/
+			
+			protected function mxtreeitemrenderer1_doubleClickHandler(event:MouseEvent):void
+			{
+				// TODO Auto-generated method stub
+				dispatchEvent( new ObjectsTreePanelEvent ( ObjectsTreePanelEvent.DOUBLE_CLICK ) );
+			}
 			
 		]]>
 	</fx:Script>
