add hScroll in scriptArea add green color for emptu scripts
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7545 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ContainersPanel.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ContainersPanel.mxml
@@ -2,7 +2,8 @@
 <s:Panel xmlns:fx="http://ns.adobe.com/mxml/2009"
 		 xmlns:s="library://ns.adobe.com/flex/spark"
 		 xmlns:mx="library://ns.adobe.com/flex/mx"
-		 creationComplete="panel1_creationCompleteHandler(event)">
+		 creationComplete="panel1_creationCompleteHandler(event)"
+		 removedFromStage="panel1_removedFromStageHandler(event)">
 
 	<fx:Script>
 		<![CDATA[
@@ -11,6 +12,7 @@
 			import mx.events.ListEvent;
 			import mx.managers.DragManager;
 			
+			import net.vdombox.ide.common.events.ObjectsTreePanelEvent;
 			import net.vdombox.ide.modules.scripts.events.ContainersPanelEvent;
 
 			[Bindable]
@@ -219,7 +221,10 @@
 				dispatchEvent( new ContainersPanelEvent( ContainersPanelEvent.CONTAINER_CHANGED ) );
 			}
 			
-			
+			protected function panel1_removedFromStageHandler(event:Event):void
+			{
+				containersTree.removeEventListener( ListEvent.CHANGE, objectsTree_changeHandler );
+			}
 			
 		]]>
 	</fx:Script>
